--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>pda-b</title>
+    <title>个人数据管理专家-运营端</title>
   </head>
   <body>
     <div id="app"></div>
