--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html style="width: 100%;height: 100%">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>个人数据管理专家-运营端</title>
   </head>
-  <body>
+  <body style="width: 100%;height: 100%">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
